  approximation (Fomel, Ying, and Song)
* jsg/crs: Non-hyperbolic common reflection surface (Fomel and
  Kazinnik)

To SCons:

To documentation:

To APIs:

To the Python package:

To programs:

* sfsemblance: semblance over the specified axis
* sflinear: linear 1-D interpolation
* sfspike now optionally accepts stdin
* iwave package from Bill Symes and The Rice Inversion Project

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:
* Fixed settype bug in Python API

In the Python package:

In programs:

* Fixed size limitation in sfclip2
* Added x0 and y0 in sfstolt 
* Fixed installing the plplot driver with .driver_info extension

In the build system:

===Changes in defaults===

==Release 1.3 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/reversible: A reversible transform for seismic data processing
  (Burnett and Ferguson) 
* sep/pyramid: The pyramid transform and its application to
  signal/noise separation (Sun and Ronen)
* jsg/ffd: Fourier finite-difference wave propagation (Song and Fomel)
* jsg/apefint: Seismic data interpolation beyond aliasing using
  regularized nonstationary autoregression (Liu and Fomel)
* jsg/timefreq: Time-frequency analysis of seismic data using local
  attributes (Liu, Fomel, and Chen)
* data/alaska: Open Data/Open Source: Seismic Unix scripts to process
  a 2D land line (Schleicher)
* jsg/ltft: Seismic data analysis using local time-frequency
  decomposition (Liu and Fomel)

To SCons:

* Upgraded to scons-2.1.0

To documentation:

* Python API documented with Epydoc
* Limited the number of USED IN examples displayed by selfdoc and man
 pages (25 by default, controled by -u parameter in sfdoc)
* book/tutorial: A brief introduction to Madagascar (Jeff Godwin)
* Added selfdoc for sfomp and sfmpi

To APIs:

* librsfsegy / rsfsegy.h as a separate library

To the Python package:

* an option for the user to overwrite the installed config.py with