@@ -39,7 +39,7 @@
 int main (int argc, char* argv[])
 {
 
-    int i1,i2,i3,j1,j2;
+    int i1,i2,j1,j2;
 
     int n1,n2,n3;
     float o1,o2,o3;
